k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: popolitics
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
    # 1. Règle pour l'API Django et Swagger
    - host: popolitics.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service-svc
                port:
                  number: 8000
    - host: argocd.popolitics.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
